--- a/.env
+++ b/.env
@@ -8,10 +8,14 @@ JWT_SECRET=your_jwt_secret_key_here
 JWT_EXPIRATION=10h  # e.g., 1 hour or 30d for 30 days
 
 # Nodemailer Credentials
-MAIL_HOST=smtp.gmail.com
-MAIL_PORT=587
-MAIL_USER=your_email@gmail.com
-MAIL_PASS=your_email_password
+# Email Configuration
+EMAIL_SERVICE=gmail
+EMAIL_USER=ergauravkumar02071998@gmail.com
+EMAIL_PASSWORD=kmox yoye pult pcmg
+
+# Redis Configuration
+REDIS_HOST=localhost
+REDIS_PORT=6379
 
 # Database Configuration (MongoDB, for example)
 MONGO_URI=mongodb+srv://r:f@cluster0.h1xl8c4.mongodb.net/misogiAi
