--- a/.env
+++ b/.env
@@ -14,8 +14,16 @@ EMAIL_USER=ergauravkumar02071998@gmail.com
 EMAIL_PASSWORD=kmox yoye pult pcmg
 
 # Redis Configuration
-REDIS_HOST=localhost
-REDIS_PORT=6379
+# REDIS_HOST=localhost
+# REDIS_PORT=6379
+
+
+
+REDIS_HOST=redis-13125.crce179.ap-south-1-1.ec2.redns.redis-cloud.com:13125
+REDIS_PORT=13125
+REDIS_USERNAME=default
+REDIS_PASSWORD=bbWRV2Y5Qi7bAh4mhtgOBcgCxSqFpYK6
+REDIS_TLS=true
 
 # Database Configuration (MongoDB, for example)
 MONGO_URI=mongodb+srv://r:f@cluster0.h1xl8c4.mongodb.net/misogiAi
